Aug 02, 2010 - chris
o added a new sample client1.c which can communicate with server1.c

Aug 02, 2010 - chris
o the source repository is now hosted at
	http://github.com/cruppstahl/hamsterdb. The old subversion repository
	is no longer available.

Jul 24, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.5

Jul 15, 2010 - chris
o finalized the client/server communication; hamsterdb is now able to
	access remote servers. A new header file hamserver.h was added.

Jul 02, 2010 - chris
o HAM_PARAM_GET_STATISTICS was moved to hamsterdb_int.h
o a new sample "server1" was added

Apr 29, 2010 - chris
o ham_env_get_parameters and ham_get_parameters do no longer accept
    NULL pointers as the first parameter; instead, they will fail with
    HAM_INV_PARAMETER

Apr 22, 2010 - chris
o Fixed compilation for MacOSX SnowLeopard (thanks, Olisa)

Apr 13, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.4

Apr 10, 2010 - chris
o The documentation in the header file was improved and some constants
    were renamed/deprecated

Apr 10, 2010 - chris
o Bugfix - win32 only: with very big databases and unlimited cache, resources
    were exceeded and mmap failed. in this case we'll now fall back to 
    read/write (thanks, Simon)

Mar 27, 2010 - chris
o Bugfix - it was allowed to create temp. Transactions while a non-temp.
	Transaction was still active

Mar 18, 2010 - chris
o Optimization - if HAM_DAM_SEQUENTIAL_INSERT is set then btree nodes will
    not be split in the middle, but at the end of the node. hamsterdb will
    also auto-recognize if an insert is sequential (at the "right end" of 
    the index). This leads to MUCH smaller files and therefore higher
    performance (thanks, Simon)

Mar 10, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.3

Mar 10, 2010 - chris